--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
     "@popperjs/core": "^2.11.8",
+    "apexcharts": "^4.4.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
@@ -36,10 +37,12 @@
     "json-server": "^1.0.0-beta.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "reactstrap": "^9.2.3",
+    "recharts": "^2.15.1",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.6"
   },
