--- a/package.json
+++ b/package.json
@@ -48,15 +48,16 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.23",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.6",
     "prettier": "3.3.3",
     "sass": "^1.79.3",
+    "tailwindcss": "^4.1.18",
     "vite": "^5.4.8"
   }
 }
