--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
+    "react-joyride": "^2.9.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "reactstrap": "^9.2.3",
